app/assets/stylesheets/external/vcwiz.scss
$white: #FFFFFF;
$black: #000000;
$grey: #666666;
$header-grey: #434D59;
$mid-grey: #AAADAE;
$light-grey: #E9E9E9;
$success: #2ADBC4;
$success-dark: #23CFB2;

html, body, .full-screen {
  height: 100%;
  width: 100%;
}

#vcwiz {
  font-family: 'Circular Std', CircularStd-Book, "Helvetica Neue", sans-serif;
}

.button.success {
  background-image: linear-gradient(-180deg, $success 0%, $success-dark 100%);
  color: $white;

  &:focus, &:hover {
    background-image: linear-gradient(-180deg, $success-dark 0%, $success-dark 100%);
    color: $white;
  }
}

.rounded-image {
  background-color: $white;
  overflow: hidden;
  border: 1px solid $mid-grey;
  border-radius: 50%;

  img {
    object-fit: cover;
    border-radius: 50%;
    padding: 2px 2px 4px;
  }

  .fallback {
    font-size: 11px;
    text-align: center;
  }
}

#top-bar {
  height: 85px;
  background-image: linear-gradient(-180deg, $success 0%, $success-dark 100%);

  .title {
    color: $white;
    padding-left: 2vw;
    cursor: pointer;
  }

  .subtitle {
    vertical-align: middle;
    font-weight: bold;
  }

  h3, h5 {
    display: inline-block;
  }

  h3 {
    display: inline-block;
    padding-right: 0.5em;
  }
}

.faded {
  opacity: 0.8;
}

.filter-column {
  padding-left: 0;
  padding-right: 0;

  .Select-placeholder {
    color: $black;
  }

  .is-focused .Select-placeholder {
    color: $grey;
  }
}

.search-hero {
  padding-top: 75px;
  width: 70vw;
  margin: 0 auto;

  p {
    color: $grey;
  }

  .filters {
    padding-top: 25px;
  }

  .or {
    padding-top: 20px;
    padding-bottom: 5px;
  }
}

.search-and-filters {
  .search {
    input {
      border: none;
      outline: none;
      text-align: center;
    }

    .line {
      border-bottom: 2px solid $light-grey;
      width: 230px;
    }

    i {
      padding-right: 6px;
    }

    i::before {
      color: $success-dark;
      -moz-transform: scaleX(-1);
      -o-transform: scaleX(-1);
      -webkit-transform: scaleX(-1);
      transform: scaleX(-1);
    }
  }
}

.filter-page {
  &-header {
    h6 {
      text-transform: uppercase;
      font-weight: bold;
      color: $mid-grey;
    }

    .option-switches {
      margin-top: 25px;

      .switch {
        padding-top: 10px;
      }
    }

    .or {
      color: $grey;
      font-weight: bold;
      text-align: center;
      margin-top: 60px;
    }
    .search-and-filters {
      .search {
        margin-top: 65px;
      }

      .line {
        width: 220px;
      }
    }

    .wide-row {
      max-width: 95%;
    }

    .filters {
      .Select--multi .Select-multi-value-wrapper {
        padding-top: 2px;
      }
    }
  }

  &-body {
    background-color: $light-grey;
  }
}

.list-page {
  padding-top: 30px;

  &-header {
    .title {
      font-size: large;
      font-weight: bold;
      padding-left: 1em;
    }
  }

  &-body {
    background-color: $light-grey;
  }
}

.discover-page {
  &-header {
    margin-bottom: 50px;
  }

  &-body {
    background-color: $light-grey;

    .inline-image {
      display: inline-block;

      &:not(:first-child) {
        margin-left: 8px;
      }
    }

    h6 {
      text-transform: uppercase;
      color: $mid-grey;
      font-size: 0.9rem;
      font-weight: bold;
    }

    .loading {
      padding-top: 15%;
      width: 200px;
      margin: auto;
    }

    .cards {
      padding-top: 50px;
      margin: auto;
      width: 85%;
    }

    .card {
      height: 165px;
      width: 350px;
      margin: auto;
      cursor: pointer;

      .card-section {
        position: relative;;
      }

      .body {
        position: absolute;
        bottom: 10px;
      }

      .title {
        font-weight: bold;
        font-size: 1.05em;
        line-height: 1.3em;
      }
    }
  }
}

.toplevel-filter-page {
  .filters {
    padding-top: 25px;
    padding-bottom: 25px;
  }
}

.filters {
  .Select-control {
    height: 50px;
    text-align: left;
  }

  .Select--multi .Select-placeholder, .Select--multi .Select-input {
    padding-top: 6px;
  }

  .Select--multi .Select-value-label {
    padding: 2px;
  }

  .Select--multi .Select-value {
    font-size: 1em;
    padding: 3px;
    color: unset;
    background-color: rgba(42, 219, 196, 0.24);
    margin-top: 7px;
  }

  .Select--multi .Select-value-icon {
    border-right: none;
  }

  .boxed {
    height: 50px;
    padding: 3px 5px;
  }

  .button.success {
    font-size: 1em;
    font-weight: bolder;
    border-radius: 5%;
    height: 100%;
    width: 100%;
    padding: 0;
  }
}

mark.highlighter {
  font-weight: bold;
  background-color: unset;
}

.company-container {
  img {
    bottom: 2px;
    position: relative;
  }

  p {
    margin-bottom: 0.25rem;
    font-size: small;
  }

  .company-name {
    font-size: medium;
  }

  .labels {
    .small {
      font-size: xx-small;
    }
  }
}

.labels {
  bottom: 2px;
  position: relative;

  .label {
    margin-left: 5px;
  }

  .small {
    font-size: x-small;
  }
}

.results-table {
  width: 100%;
  height: 100%;

  .image-text {
    margin-left: 80px;
    width: calc(95% - 60px - 1rem);
  }

  .floating-image {
    position: absolute;
    top: 20px;
  }

  .header {
    background: $header-grey;
    color: $white;
    text-transform: uppercase;
  }

  .table-main {
    border-color: $header-grey;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  .Select-control, .is-open > .Select-control {
    border-radius: 40px;
  }

  .Select-placeholder, .Select--single > .Select-control .Select-value {
    text-align: center;
  }

  .Select-placeholder {
    font-weight: bold;
    color: $white;
    background-color: $success;
    text-transform: uppercase;
  }

  .textfit-cell {
    width: 95%;
    height: 100%;
    white-space: normal;
  }

  .text-block, .media-block {
    margin-top: 15px;
    margin-left: 10px;
  }

  .company-cell {
    .company-name {
      font-size: larger;
    }

    .labels {
      .small {
        font-size: small;
      }
    }
  }
}

// Hacks

#vcwiz > div > div > div > div > div.fixedDataTableRowLayout_rowWrapper > div > div > div:nth-child(2) {
  background-color: $header-grey;
}

